Implement CurrentLocation class into MainActivity class, and use it to track current device's location when the track button is clicked.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,6 @@
         android:background="#00ffffff"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
-        android:onClick="moveToCurrentLocation" />
+        android:onClick="trackDeviceLocation" />
 
 </RelativeLayout>
