--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
 
     <ImageButton
         android:id="@+id/btn_currentLocation"
-        android:src="@drawable/btn_current_location"
+        android:src="@drawable/blue_air"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
