Changed the locator button, and move it up a little bit.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,15 +15,15 @@
 
     <ImageButton
         android:id="@+id/btn_currentLocation"
-        android:src="@drawable/btn_current_location"
+        android:src="@drawable/btn_locator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:background="#00ffffff"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="60dp"
         android:onClick="trackDeviceLocation" />
 
 </RelativeLayout>
