- Made the current location marker to move smoothly - Implement the warning timer to the application and added a popup window so user can select how long before they get notified.

--- a/app/src/main/res/layout/window_warning_timer.xml
+++ b/app/src/main/res/layout/window_warning_timer.xml
@@ -22,44 +22,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="You will receive notification by"/>
-<!--
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="20dp"
-        android:orientation="vertical">
+        android:layout_marginRight="10dp"
+        android:text="How long do you want to park?"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="You will receive notification by"/>
-
-        <TextView
-            android:id="@+id/textview_warning_timer_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:textSize="24dp"
-            android:text="12 : 00 PM"/>
-
-        <Button
-            android:id="@+id/btn_warning_timer_settime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Set Time"/>
-
-    </LinearLayout>
--->
     <TimePicker
         android:id="@+id/timepicker_warning_timer"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></TimePicker>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"></TimePicker>
 
     <RelativeLayout
         android:layout_width="fill_parent"
