--- a/app/src/main/res/layout/window_warning_timer.xml
+++ b/app/src/main/res/layout/window_warning_timer.xml
@@ -26,6 +26,34 @@
         android:layout_marginRight="10dp"
         android:text="How long do you want to park?"/>
 
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:layout_centerInParent="true"
+                android:text="Hours"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_centerInParent="true"
+                android:text="Minutes"/>
+
+        </LinearLayout>
+    </RelativeLayout>
+
     <TimePicker
         android:id="@+id/timepicker_warning_timer"
         android:layout_width="wrap_content"
@@ -36,7 +64,6 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp">
