--- a/app/src/main/res/layout/window_parking_info.xml
+++ b/app/src/main/res/layout/window_parking_info.xml
@@ -24,7 +24,8 @@
         android:id="@+id/parking_snippet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:textStyle="italic"/>
 
 </LinearLayout>
