- Changed the border color of the off-street parking (garage parking) InfoWindow. - Fixed the issue of InfoWindow not showing properly.

--- a/app/src/main/res/drawable/layout_infowindow_bg.xml
+++ b/app/src/main/res/drawable/layout_infowindow_bg.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="3dp"
-        android:color="#B1BCBE" />
+        android:color="#7800B4" />
 
     <corners android:radius="10dp"/>
 
