--- a/app/src/main/res/layout/window_warning_timer.xml
+++ b/app/src/main/res/layout/window_warning_timer.xml
@@ -13,10 +13,20 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="5dp"
         android:textSize="18dp"
         android:textStyle="bold"
         android:text="Warning Timer"/>
+
+    <!-- Horizontal bar -->
+    <View
+        android:id="@+id/search_location2_bar"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="20dp"
+        android:background="#7800B4" />
 
     <TextView
         android:layout_width="wrap_content"
