--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,58 +6,14 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Search"
-            android:layout_gravity="left|center_vertical"/>
-
-        <!--<EditText-->
-            <!--android:id="@+id/searchLocation"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center|center_vertical"-->
-            <!--android:ems="12"/>-->
-
-        <AutoCompleteTextView
-            android:id="@+id/searchLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|center_vertical"
-            android:ems="12"
-            android:linksClickable="false"
-            android:maxLines="1"
-            android:inputType="text"
-            android:hint="Enter Address or Zip Code">
-        <requestFocus />
-        </AutoCompleteTextView>
-
-        <Button
-            android:id="@+id/searchButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|center_vertical"
-            android:text="Go!"
-            android:onClick="searchLocation"/>
-
-
-
-
-    </LinearLayout>
-
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:mapbox="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+        <!-- Map -->
         <fragment
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
@@ -66,32 +22,79 @@
             android:layout_height="match_parent"
             android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
+        <!-- Setting and search -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:orientation="horizontal"
+            android:layout_margin="15dp"
+            android:background="#FFFFFF">
 
+            <ImageButton
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/icon_setting"
+                android:onClick="showSettingWindow"/>
 
-        <ImageButton
-            android:id="@+id/btn_currentLocation"
-            android:src="@drawable/btn_locator"
+            <View
+                android:layout_width="1dp"
+                android:layout_height="fill_parent"
+                android:background="#FFB0B0B0" />
+
+            <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/icon_search"/>
+
+            <AutoCompleteTextView
+                android:id="@+id/searchLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|center_vertical"
+                android:ems="12"
+                android:linksClickable="false"
+                android:layout_weight="1"
+                android:maxLines="1"
+                android:inputType="text"
+                android:hint="Enter Address">
+            </AutoCompleteTextView>
+
+            <Button
+                android:id="@+id/searchButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:text="Go!"
+                android:onClick="searchLocation"/>
+        </LinearLayout>
+
+        <!-- Timer and locator buttons -->
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:background="#00ffffff"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
-            android:onClick="trackDeviceLocation" />
+            android:layout_centerInParent="true"
+            android:layout_alignParentBottom="true">
 
-        <ImageButton
-            android:id="@+id/btn_warning_timer"
-            android:src="@drawable/hourglass"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#00ffffff"
-            android:onClick="showWarningTimerWindow"
-            android:layout_above="@+id/btn_currentLocation"
-            android:layout_alignLeft="@+id/btn_currentLocation"
-            android:layout_alignStart="@+id/btn_currentLocation" />
+            <ImageButton
+                android:id="@+id/btn_warning_timer"
+                android:src="@drawable/icon_timer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="15dp"
+                android:background="#00ffffff"
+                android:onClick="showWarningTimerWindow"/>
 
+            <ImageButton
+                android:id="@+id/btn_currentLocation"
+                android:src="@drawable/icon_locator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginBottom="15dp"
+                android:background="#00ffffff"
+                android:onClick="trackDeviceLocation" />
+
+        </LinearLayout>
     </RelativeLayout>
-
 </LinearLayout>
