--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,17 +15,17 @@
 
         <!-- Map -->
         <fragment
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/map"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:name="com.google.android.gms.maps.SupportMapFragment"/>
+            class="com.csc413.group9.parkIt.RetainMapFragment"/>
 
         <!-- Setting and search -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="48dp"
+            android:layout_centerInParent="true"
+            android:layout_alignParentTop="true"
             android:orientation="horizontal"
             android:layout_margin="15dp"
             android:background="#FFFFFF">
