--- a/app/src/main/res/layout/window_settings.xml
+++ b/app/src/main/res/layout/window_settings.xml
@@ -5,14 +5,13 @@
     android:padding="10dp"
     android:layout_gravity="center"
     android:orientation="vertical"
-    android:background="#FFFFFF">
+    android:background="@drawable/layout_infowindow_bg">
 
     <TextView
         android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginBottom="5dp"
         android:textSize="18dp"
         android:textStyle="bold"
