--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -3,20 +3,12 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+
     <ImageView id="@+id/splash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/parking_icon"
-        />
-    <TextView android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="Welcome To ParkIt"
-        android:textSize="12dp"
-        android:textColor="#7800b4"
-        android:gravity="center_horizontal"
-        android:layout_alignParentBottom="true"
+        android:src="@drawable/splashimage"
         />
 
 </LinearLayout>
